# PrisonersDilemma

./: CMakeLists.txt  ClassGame.cpp  ClassMatrix.cpp  ClassMatrix.h  Detailed.h  Fast.cpp  Fast.h  HPrisoners.h  Prisoners.cpp  Test.cpp  main.cpp
GameModes/: ClassGame.cpp
GameModes/Detailed/: Detailed.h
GameModes/Fast/: Fast.cpp  Fast.h
GameModes/Tournament/: Tournament.h
Matrix/: ClassMatrix.cpp  ClassMatrix.h
Parser/: Parser.cpp  Parser.h
Strtegies/: ClassStrategy.cpp  ClassStrategy.h  HistoryOfMoves.cpp  HistoryOfMoves.h  StrategyFactoryRegistration.h  Strategy_1.h  Strategy_2.cpp  Strategy_2.h  Strategy_3.h  Strategy_4.cpp  Strategy_4.h  TheStrategyFactory.cpp
Strtegies/InputInformation/: Input.cpp  Input.h
Strtegies/StrategyFactory/: StrategyFactoryRegistration.h  TheStrategyFactory.cpp  TheStrategyFactory.h
Strtegies/Strategy_1/: Strategy_1.cpp  Strategy_1.h
Strtegies/Strategy_2/: Strategy_2.h
Strtegies/Strategy_3/: Strategy_3.cpp  Strategy_3.h
Strtegies/Strategy_4/: Strategy_4.cpp  Strategy_4.h
Strtegies/Strategy_5/: Strategy_5.cpp  Strategy_5.h
Strtegies/Strategy_6/: Strategy_6.cpp  Strategy_6.h
